--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react-dom": "^15.5.4",
     "react-styleguidist": "^5.3.2",
     "webpack": "^2.6.1"
+  },
+  "dependencies": {
+    "material-ui": "^0.18.3"
   }
 }
