--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   },
   "dependencies": {
     "material-ui": "^0.18.3"
+  },
+  "peerDependencies": {
+    "react-tap-event-plugin": "^2.0.1"
   }
 }
