--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
   "license": "UNLICENSED",
   "scripts": {
     "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build"
+    "styleguide:build": "styleguidist build",
+    "start": "yarn styleguide"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-styleguidist": "^5.3.2",
     "webpack": "^2.6.1"
+  },
+  "dependencies": {
+    "material-ui": "^0.18.3"
+  },
+  "peerDependencies": {
+    "react-tap-event-plugin": "^2.0.1"
   }
 }
