--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-styleguidist": "^5.3.2",
+    "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
   },
   "dependencies": {
-    "material-ui": "^0.18.3"
+    "material-ui": "^0.18.3",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "peerDependencies": {
     "react-tap-event-plugin": "^2.0.1"
