--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "scripts": {
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
-    "start": "yarn styleguide"
+    "start": "yarn styleguide",
+    "lint": "yarn standard"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -21,6 +26,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-styleguidist": "^5.3.2",
+    "standard": "^10.0.2",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
   },
