--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
     "start": "yarn styleguide",
-    "lint": "yarn standard"
+    "lint": "standard",
+    "test": "jest"
   },
   "standard": {
     "parser": "babel-eslint"
@@ -23,9 +24,11 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
+    "jest": "^20.0.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-styleguidist": "^5.3.2",
+    "react-test-renderer": "^15.5.4",
     "standard": "^10.0.2",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
@@ -36,5 +39,14 @@
   },
   "peerDependencies": {
     "react-tap-event-plugin": "^2.0.1"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "modulePaths": [
+      "./src"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
+    }
   }
 }
