--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
     "start": "yarn styleguide",
+    "build:babel": "babel ./src --out-dir ./dist --ignore spec.js",
     "lint": "standard",
     "test": "jest"
   },
@@ -17,6 +18,7 @@
     "parser": "babel-eslint"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
