--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "yarn styleguide",
     "build:babel": "babel ./src --out-dir ./dist --ignore spec.js",
     "lint": "standard",
-    "test": "jest"
+    "test": "jest",
+    "build-scout": "node scoutfile/build",
+    "deploy-scout": "node scoutfile/deploy"
   },
   "standard": {
     "parser": "babel-eslint"
@@ -31,6 +33,7 @@
     "react-dom": "^15.5.4",
     "react-styleguidist": "^5.3.2",
     "react-test-renderer": "^15.5.4",
+    "scoutfile": "^4.0.0",
     "standard": "^10.0.2",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
