--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "standard",
     "test": "jest",
     "build-scout": "node scoutfile/build",
-    "deploy-scout": "node scoutfile/deploy"
+    "deploy-scout": "node scoutfile/deploy",
+    "deploy": "yarn build:babel && yarn styleguide:build && node deploy"
   },
   "standard": {
     "parser": "babel-eslint"
@@ -28,6 +29,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
+    "git-rev": "^0.2.1",
     "jest": "^20.0.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
