--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "start": "yarn styleguide",
     "build:babel": "babel ./src --out-dir ./dist --ignore spec.js",
     "lint": "standard",
-    "test": "jest"
+    "test": "jest",
+    "build-scout": "node scoutfile/build",
+    "deploy-scout": "node scoutfile/deploy",
+    "deploy": "yarn styleguide:build && node deploy",
+    "release": "yarn build:babel"
   },
   "standard": {
     "parser": "babel-eslint"
@@ -26,11 +30,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
+    "git-rev": "^0.2.1",
     "jest": "^20.0.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-styleguidist": "^5.3.2",
     "react-test-renderer": "^15.5.4",
+    "scoutfile": "^4.0.0",
     "standard": "^10.0.2",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
