feat: add babel'd components

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,9 @@ coverage
 .lock-wscript
 
 # Compiled code
-dist
+dist/*
+!dist/components
+!dist/styles
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
