--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-dom": "^15.5.4",
     "react-styleguidist": "^5.3.2",
     "react-test-renderer": "^15.5.4",
-    "scoutfile": "^4.0.0",
+    "scoutfile": "3.0.3",
     "standard": "^10.0.2",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
