--- a/scoutfile/config.json
+++ b/scoutfile/config.json
@@ -1,5 +1,6 @@
 {
   "scoutHost": "https://storage.googleapis.com/",
   "scoutHostLocal": "https://localhost:6060/",
-  "styleguideJS": "styleguide.js"
+  "styleguideJS": "styleguide.js",
+  "styleguideChunkJS": "0.styleguide.js"
 }
