--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack": "^2.6.1"
   },
   "dependencies": {
+    "global": "^4.3.2",
     "material-ui": "^0.18.3",
     "react-tap-event-plugin": "^2.0.1"
   },
