--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -43,6 +44,8 @@
   "dependencies": {
     "global": "^4.3.2",
     "material-ui": "^0.18.3",
+    "radium": "^0.19.1",
+    "react": "^15.6.1",
     "react-tap-event-plugin": "^2.0.1"
   },
   "peerDependencies": {
